Fix content detail header overflowing in firefox [fixes #25528643]

--- a/scss/base/_menu.scss
+++ b/scss/base/_menu.scss
@@ -35,7 +35,7 @@
 .link_menu {
     position: relative;
     z-index : $link-menu-z-index;
-    display:inline;
+    display:inline-block;
     padding-left: 12px;
     .title {
         font-size: 12px;
